src/app.css
/* importing fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;


*, *::before, *::after{
    font-family: 'Inter', sans-serif; 
    scroll-behavior: smooth;
}

